--- a/INDEX.html
+++ b/INDEX.html
@@ -148,7 +148,7 @@
             _________  FESTIVALS | LIVE SETS | TOP DJS _________
         </div>
         <div class="frame">
-            <iframe src="http://127.0.0.1:5500/videos/video.html" width="100%" height="1070" frameborder="0" scrolling="no" style="overflow:hidden;"></iframe>
+            <iframe src="video.html" width="100%" height="1070" frameborder="0" scrolling="no" style="overflow:hidden;"></iframe>
         </div>
     </section>
     <div class="contenido">
