--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mixcloud Style Video Player</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="videos/styles.css">
 </head>
 <body>
     <div class="background-overlay"></div>
@@ -32,6 +32,6 @@
     </div>
 
     <script src="https://www.youtube.com/iframe_api"></script>
-    <script src="script.js"></script>
+    <script src="videos/script.js"></script>
 </body>
 </html>
