--- a/INDEX.html
+++ b/INDEX.html
@@ -140,7 +140,7 @@
     </section>
     <section class="titulo3">
         <div class="frame">
-            <iframe src="PRUEBA\listado de mixes locales\reproductor.html" width="100%" height="730" frameborder="0" scrolling="no" style="overflow:hidden;"></iframe>
+            <iframe src="reproductor.html" width="100%" height="730" frameborder="0" scrolling="no" style="overflow:hidden;"></iframe>
         </div>
     </section>
     <section class="titulo">
