--- a/reproductor.html
+++ b/reproductor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Rankings</title>
-    <link rel="stylesheet" href="prev_reproductor/styles.css">
+    <link rel="stylesheet" href="stylesre.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -39,6 +39,6 @@
             </section>
         </main>
     </div>
-    <script src="prev_reproductor/script.js"></script>
+    <script src="scriptre.js"></script>
 </body>
 </html>
